# Sender

./: pyproject.toml
apps/sender/api/v1/: urls.py
apps/sender/tasks/: __init__.py
core/: celery.py  urls.py
core/settings/: __init__.py
core/settings/components/: celery.py  common.py  database.py
